--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.1.3",
     "css-loader": "^1.0.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.2",
+    "popper.js": "^1.14.3",
+    "postcss-loader": "^2.1.6",
+    "precss": "^3.1.2",
     "redux-immutable-state-invariant": "^2.1.0",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
-    "svg-inline-loader": "^0.8.0",
-    "webpack": "^4.16.2",
+    "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
   }
