--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "startServer": "cd server; node index.js;",
+    "startServer": "cd server; node index.js; cd..",
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
   },
